--- a/khoBlog/templates/extras/form_field_extra.html
+++ b/khoBlog/templates/extras/form_field_extra.html
@@ -11,10 +11,15 @@
     <div class="form-check">
         {{ field|add_class:"form-check-input" }}
     </div>
-{% elif field|widget_type == "selectmultiple" or field|widget_type == "datetimepickerinput" %}
+{% elif field|widget_type == "selectmultiple" %}
     {{ field.label_tag }}
     <div class="input-group">
         {{ field|add_class:"form-control"|attr:"multiple" }}
+    </div>
+{% elif field|widget_type == "datetimepickerinput" %}
+    {{ field.label_tag }}
+    <div class="input-group">
+        {{ field|add_class:"form-control" }}
     </div>
 {% elif field|widget_type == "markdownxwidget" %}
     {{ field|add_class:"form-control"|attr:"placeholder:" }}
