--- a/khoBlog/templates/account/edit_profile.html
+++ b/khoBlog/templates/account/edit_profile.html
@@ -33,7 +33,7 @@
 
                                 <div class="field mb-2">
                                     <div class="form-floating">
-                                        {{ form.username|add_class:"form-control w-25"|attr:"placeholder: Username" }}
+                                        {{ form.username|add_class:"form-control"|attr:"placeholder: Username" }}
                                         {{ form.username.label_tag }}
                                     </div>
                                     {% if form.username.help_text %}
