--- a/blog/templates/blog/post_update.html
+++ b/blog/templates/blog/post_update.html
@@ -25,26 +25,20 @@
                 </div>
 
                 <div class="field mb-2">
-                    <div class="form-floating">
-                        {{ form.title|add_class:"form-control w-25"|attr:"placeholder:Post title" }}
-                        {{ form.title.label_tag }}
+                    <div class="input-group">
+                        <span class="input-group-text">Title</span>
+                        {{ form.title|add_class:"form-control w-50"|attr:"placeholder:Post title" }}
+                        {{ form.featured_title|add_class:"form-control"|attr:"placeholder:Post featured title" }}
                     </div>
                     {% if form.title.help_text %}
                         <span class="text-small text-muted">{{ form.title.help_text }}</span>
                     {% endif %}
-                    {% for error in form.title.errors %}
-                        <small class="form-text text-danger">{{ error }}</small>
-                    {% endfor %}
-                </div>
-
-                <div class="field mb-2">
-                    <div class="form-floating">
-                        {{ form.featured_title|add_class:"form-control w-25"|attr:"placeholder:Post featured title" }}
-                        {{ form.featured_title.label_tag }}
-                    </div>
                     {% if form.featured_title.help_text %}
                         <span class="text-small text-muted">{{ form.featured_title.help_text }}</span>
                     {% endif %}
+                    {% for error in form.title.errors %}
+                        <small class="form-text text-danger">{{ error }}</small>
+                    {% endfor %}
                     {% for error in form.featured_title.errors %}
                         <small class="form-text text-danger">{{ error }}</small>
                     {% endfor %}
@@ -182,9 +176,7 @@
 
                 <div class="field mb-2">
                     {{ form.published_date.label_tag }}
-                    <div class="input-group">
-                        {{ form.published_date|add_class:"form-control" }}
-                    </div>
+                    {{ form.published_date|add_class:"form-control" }}
                     {% if form.published_date.help_text %}
                         <span class="text-small text-muted">{{ form.published_date.help_text }}</span>
                     {% endif %}
