--- a/khoBlog/templates/comments/list.html
+++ b/khoBlog/templates/comments/list.html
@@ -30,6 +30,47 @@
                                 {{ comment.user }}
                             {% endif %}
                         {% endif %}
+
+                        {% if user.is_authenticated %}
+                            <span class="float-end">
+                                {% if user.id == comment.user_id or user.is_superuser %}
+
+                                    <div class="btn-group float-end">
+                                        <a class="btn btn-secondary" href="{% url 'comments:comments-edit' pk=comment.id %}">
+                                            <i class="bi bi-pencil-square"></i> Edit
+                                        </a>
+
+                                        {% if user.is_superuser %}
+                                            <button type="button" class="btn btn-secondary dropdown-toggle dropdown-toggle-split" id="commentActionsDropdown-{{ comment.id }}" data-bs-toggle="dropdown" aria-expanded="false">
+                                                <span class="visually-hidden">Toggle Dropdown</span>
+                                            </button>
+
+                                            <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="commentActionsDropdown-{{ comment.id }}">
+                                                    {% if comment.is_public == False %}
+                                                        <a class="dropdown-item" href="{% url 'comments-approve' comment_id=comment.id %}">
+                                                            <i class="bi bi-check2-square"></i> Approve
+                                                        </a>
+                                                    {% endif %}
+
+                                                    <a class="dropdown-item" href="{% url 'admin:comments_customcomment_change' object_id=comment.id %}">
+                                                        <i class="bi bi-pencil-square"></i> Edit in Admin
+                                                    </a>
+
+                                                {% comment %} {% if comment.is_public == True %}
+                                                    {% if user.is_superuser %}
+                                                        <div class="dropdown-divider"></div>
+                                                    {% endif %}
+
+                                                    <a class="dropdown-item" href="{% url 'comments-delete' comment_id=comment.id %}">
+                                                        <i class="bi bi-trash"></i>{% if user.is_superuser %} Disapprove {% else %} Delete {% endif %}
+                                                    </a>
+                                                {% endif %} {% endcomment %}
+                                            </ul>
+                                        {% endif %}
+                                    </div>
+                                {% endif %}
+                            </span>
+                        {% endif %}
                     </h4>
                     <p class="text-muted text-small mb-0">
                         <span>{{ comment.submit_date|date:'l, d F Y' }}</span>
