--- a/blog/templates/blog/search.html
+++ b/blog/templates/blog/search.html
@@ -1,4 +1,4 @@
-{% extends 'blog/base_post_main_block.html' %}
+{% extends 'blog/base_post.html' %}
 {% load instance %}
 
 {% block content_main %}
