--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -1,4 +1,4 @@
-{% extends 'blog/base_post_main_block.html' %}
+{% extends 'blog/base_post.html' %}
 {% load static %}
 {% load markdown_extra %}
 {% load read_time %}
