--- a/blog/templates/blog/post_update.html
+++ b/blog/templates/blog/post_update.html
@@ -1,4 +1,4 @@
-{% extends 'blog/base_post.html' %}
+{% extends 'sub_base_main.html' %}
 {% load static %}
 {% load widget_tweaks %}
 {% load project_tags %}
