--- a/khoBlog/templates/sub_base_main_block.html
+++ b/khoBlog/templates/sub_base_main_block.html
@@ -1,22 +1,11 @@
-{% extends 'blog/base_post.html' %}
+{% extends 'sub_base_main.html' %}
 {% load static %}
 {% load markdown_extra %}
 
 {% block main %}
 
     {% block page_top %}
-        {% block page_top_archives %}
-            <div class="text-small text-muted">
-                <a href="{% url 'blog:post_archive' %}">Archives</a> by <a href="{% url 'blog:archive_year' year=now|date:'Y' %}">Year</a> -
-                <a href="{% url 'blog:archive_month' year=now|date:'Y' month=now|date:'M' %}">Month</a> -
-                <a href="{% url 'blog:archive_week' year=now|date:'Y' week=now|date:'W' %}">Week</a> -
-                <a href="{% url 'blog:archive_day' year=now|date:'Y' month=now|date:'M' day=now|date:'d' %}">Day</a> -
-                <a href="{% url 'blog:archive_today' %}">Today</a>
-            </div>
-        {% endblock page_top_archives %}
-
-        {% block page_top_hr %}
-        {% endblock page_top_hr %}
+        {{ block.super }}
     {% endblock page_top %}
 
     {% block content_main %}
