--- a/blog/templates/blog/lists/post_list.html
+++ b/blog/templates/blog/lists/post_list.html
@@ -86,7 +86,7 @@
                         <span class="d-flex">
                             <span class="col">
                                 {% if post.get_featured_cat %}
-                                    <strong><a href="{{ post.get_featured_cat.category.get_absolute_url }}">{{ post.get_featured_cat.category|capfirst }}</a></strong>
+                                    <strong><a href="{{ post.get_featured_cat.category.get_absolute_url }}">{{ post.featured_cat_title|capfirst }}</a></strong>
                                 {% else %}
                                     <strong><a href="{{ post.categories.first.get_absolute_url }}">{{ post.categories.first|capfirst }}</a></strong>
                                 {% endif %}
