smol changes on design

--- a/blog/templates/blog/lists/series_list.html
+++ b/blog/templates/blog/lists/series_list.html
@@ -13,7 +13,7 @@
                             <span class="col">
                                 <strong class="text-muted">Series #{{ series.id }}</strong>
                             </span>
-                            <span class="col">
+                            <span class="col-auto">
                                 {% block super_buttons %}
                                     {% if user.is_superuser %}
                                         <div class="float-end btn-group" role="group" aria-label="Edit Group">
