--- a/khoBlog/templates/flatpages/default.html
+++ b/khoBlog/templates/flatpages/default.html
@@ -18,7 +18,7 @@
                 <span class="col">
                     <h2>Page #{{ page.id }}</h2>
                 </span>
-                <span class="col">
+                <span class="col-auto">
                     {% block super_buttons %}
                         {% if user.is_superuser %}
                             <div class="btn-group float-end">
