--- a/portfolio/templates/portfolio/project_detail.html
+++ b/portfolio/templates/portfolio/project_detail.html
@@ -8,8 +8,7 @@
             <span class="col">
                 <h2>Project #{{ project.id }}</h2>
             </span>
-            <span class="col">
-
+            <span class="col-auto">
                 {% block super_buttons %}
                     {% if user.is_superuser %}
                         <div class="btn-group float-end">
