--- a/blog/templates/blog/lists/tags_list.html
+++ b/blog/templates/blog/lists/tags_list.html
@@ -12,7 +12,7 @@
                             <span class="col">
                                 <strong class="text-muted">Tag #{{ tag.id }}</strong>
                             </span>
-                            <span class="col">
+                            <span class="col-auto">
                                 {% block super_buttons %}
                                     {% if user.is_superuser %}
                                         <div class="float-end btn-group" role="group" aria-label="Edit Group">
